--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ascii-art": "^2.8.5",
     "console.table": "^0.10.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "figlet": "^1.5.2",
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16"
